# cognitive-complexity-mod

./: .gitattributes  README.md  pyproject.toml
src/modified_cognitive_complexity/: __init__.py  cli.py  complexity.py  helpers.py
tests/: test_custom.py  test_for.py  test_functions.py  test_goto.py  test_if.py  test_logical_operators.py  test_switch.py  test_ternary.py  test_try.py  test_while.py  util.py
