[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modified_cognitive_complexity"
version = "0.0.1"
#authors = [
#    { name="Example Author", email="author@example.com" },
#]
#description = "A small example package"
#readme = "README.md"
requires-python = ">= 3.13"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "Operating System :: OS Independent",
#    "License :: OSI Approved :: MIT License",
#]
dependencies = [
    "typer~=0.15.2",
    "tree-sitter~=0.24.0",
    "tree-sitter-cpp~=0.23.4"
]


[dependency-groups]
test = [
    "pytest^=8.3.5"
]

#
#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
modified_cc = "modified_cognitive_complexity.cli:app"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]